--- a/views/client_view.xml
+++ b/views/client_view.xml
@@ -3,8 +3,59 @@
     <record id='visite_client_action1' model='ir.actions.act_window'>
         <field name="name">Clients</field>
         <field name="res_model">visite.client</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+                Ajouter votre premier client
+            </p>
+            <p>
+                Enregistrez les informations de vos clients pour planifier des visites.
+            </p>
+        </field>
     </record>
+
+    <record id='visite_client_view_kanban' model='ir.ui.view'>
+        <field name="name">visite.client.kanban</field>
+        <field name="model">visite.client</field>
+        <field name="arch" type="xml">
+            <kanban>
+                <field name="name"/>
+                <field name="prenom"/>
+                <field name="display_name"/>
+                <field name="email"/>
+                <field name="mobile"/>
+                <field name="ville"/>
+                <field name="pays"/>
+                <templates>
+                    <t t-name="kanban-box">
+                        <div class="oe_kanban_card oe_kanban_global_click">
+                            <div class="oe_kanban_content">
+                                <div class="o_kanban_record_top">
+                                    <div class="o_kanban_record_headings">
+                                        <strong class="o_kanban_record_title">
+                                            <i class="fa fa-user"/> <field name="display_name"/>
+                                        </strong>
+                                    </div>
+                                </div>
+                                <div class="o_kanban_record_body">
+                                    <div>
+                                        <i class="fa fa-envelope"/> <field name="email"/>
+                                    </div>
+                                    <div>
+                                        <i class="fa fa-phone"/> <field name="mobile"/>
+                                    </div>
+                                    <div t-if="record.ville.raw_value">
+                                        <i class="fa fa-map-marker"/> <field name="ville"/>, <field name="pays"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
     <record id='visite_client_view_form' model='ir.ui.view'>
         <field name="name">visite.client.form</field>
         <field name="model">visite.client</field>
