--- a/views/result_view.xml
+++ b/views/result_view.xml
@@ -4,6 +4,14 @@
     <field name="name">Résultats des visites</field>
     <field name="res_model">visite.result</field>
     <field name="view_mode">kanban,tree,form,graph</field>
+    <field name="help" type="html">
+        <p class="o_view_nocontent_smiling_face">
+            Enregistrer le résultat d'une visite
+        </p>
+        <p>
+            Créez des résultats pour suivre les ventes et les performances de vos visites.
+        </p>
+    </field>
 </record>
 
 <record id="visite_result_view_form" model="ir.ui.view">
