--- a/views/visite_views.xml
+++ b/views/visite_views.xml
@@ -3,7 +3,51 @@
 <record id='view_visite_action' model='ir.actions.act_window'>
         <field name="name">Visites</field>
         <field name="res_model">visite.management</field>
-        <field name="view_mode">tree,form,calendar</field>
+        <field name="view_mode">kanban,tree,form,calendar</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+                Créer votre première visite
+            </p>
+            <p>
+                Planifiez et suivez vos visites clients facilement.
+            </p>
+        </field>
+</record>
+
+<record id="view_visite_kanban" model="ir.ui.view">
+    <field name="name">visite.management.kanban</field>
+    <field name="model">visite.management</field>
+    <field name="arch" type="xml">
+        <kanban default_group_by="etat" class="o_kanban_small_column">
+            <field name="name"/>
+            <field name="client_id"/>
+            <field name="date"/>
+            <field name="nom"/>
+            <field name="etat"/>
+            <templates>
+                <t t-name="kanban-box">
+                    <div class="oe_kanban_card oe_kanban_global_click">
+                        <div class="oe_kanban_content">
+                            <div class="o_kanban_record_top">
+                                <div class="o_kanban_record_headings">
+                                    <strong class="o_kanban_record_title"><field name="name"/></strong>
+                                </div>
+                            </div>
+                            <div>
+                                <i class="fa fa-user"/> <field name="client_id"/>
+                            </div>
+                            <div>
+                                <i class="fa fa-calendar"/> <field name="date"/>
+                            </div>
+                            <div>
+                                <strong>Objet:</strong> <field name="nom"/>
+                            </div>
+                        </div>
+                    </div>
+                </t>
+            </templates>
+        </kanban>
+    </field>
 </record>
 
 <record id="view_visite_form" model="ir.ui.view">
@@ -12,6 +56,10 @@
         <field name="arch" type="xml">
             <form>
                 <header>
+                    <button name="action_start" string="Démarrer" type="object" class="oe_highlight" invisible="etat != 'planned'"/>
+                    <button name="action_complete" string="Terminer" type="object" class="oe_highlight" invisible="etat != 'in_progress'"/>
+                    <button name="action_cancel" string="Annuler" type="object" invisible="etat in ['done', 'cancelled']"/>
+                    <button name="action_create_result" string="Créer Résultat" type="object" class="oe_highlight" invisible="etat != 'done' or result_id"/>
                     <field name="etat" widget="statusbar" statusbar_visible="planned,in_progress,done"/>
                 </header>
                 <sheet>
